packages/twenty-docker/k8s/manifests/statefulset-server.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: twentycrm-server
  name: twentycrm-server
  namespace: twentycrm
spec:
  serviceName: twentycrm-headless      # must exist (ClusterIP=None)
  replicas: 1
  selector:
    matchLabels:
      app: twentycrm-server
  template:
    metadata:
      annotations:
        linkerd.io/inject: "enabled"
      labels:
        app: twentycrm-server
    spec:
      nodeSelector:
        doks.digitalocean.com/node-pool: cheap-lower-performance
      containers:
        - name: twentycrm
          image: twentycrm/twenty:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http-tcp
              protocol: TCP
          resources:
            requests:
              memory: "656Mi"
              cpu: "10m"
            limits:
              memory: "656Mi"
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /app/docker-data
              name: twentycrm-docker-data
            - mountPath: /app/packages/twenty-server/.local-storage
              name: twentycrm-server-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
  volumeClaimTemplates:
  - metadata:
      name: twentycrm-docker-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
  - metadata:
      name: twentycrm-server-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
