packages/twenty-docker/k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twentycrm
  namespace: twentycrm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/service-upstream: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true

    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Forwarded-For $http_x_forwarded_for";

    kubernetes.io/ingress.class: "nginx-internal"

    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/hostname: crm.i.wheelmap.tech
    nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"

spec:
  ingressClassName: nginx-internal
  rules:
    - host: crm.i.wheelmap.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: twentycrm-server
                port:
                  name: http-tcp
  tls:
  - hosts:
    - '*.i.wheelmap.tech'
